# DiaspoFinance

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_tontines_tables.py  003_add_start_date_to_tontines.py  004_create_announcements_table.py  005_create_tontine_rounds.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/tontine/: announcement_service.py  calendar.py  cycle_service.py  models.py  rotation.py  router.py  schemas.py  service.py  state_machine.py
backend/app/user/: models.py  router.py  schemas.py  service.py  webhook.py
backend/tests/: test_health.py  test_security.py
backend/tests/tontine/: test_announcements.py  test_calendar.py  test_capacity.py  test_cycle.py  test_invite.py  test_rotation.py  test_service.py  test_state_machine.py
backend/tests/user/: test_router.py  test_service.py  test_webhook.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: sw 2.js  sw 3.js  sw.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  manifest.ts
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/offline/: page.tsx
frontend/src/components/layout/: DashboardSkeleton.tsx  LanguageSwitcher.tsx  OfflineBanner.tsx  PageSkeleton.tsx
frontend/src/lib/: api-client.ts  api.ts
frontend/src/messages/: en.json  fr.json
(+17 files in other folders)
